force-app/main/default/objects/LiveChatTranscript/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>