force-app/main/default/objects/LiveChatTranscript/fields/Timevalue__c.field-meta.xml
<CustomField>
    <fullName>Timevalue__c</fullName>
    <description>Formula field used only for report</description>
    <formula>TIMEVALUE( RequestTime)</formula>
    <label>Timevalue</label>
    <type>Time</type>
</CustomField>