force-app/main/default/objects/LiveChatTranscript/fields/Visitor_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Logged_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visitor Logged In?</label>
    <type>Checkbox</type>
</CustomField>