force-app/main/default/objects/LiveChatTranscript/listViews/ChatSupport_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>ChatSupport_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>ChatSupport</label>
    <queue>ChatSupport</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>